classDiagram
    class Project {
        +String name
        +DateTime created
        +DateTime modified
        +List~DataSource~ data_sources
        +Path file_path
        +String id
        +Dict _last_saved_state
        +bool _collections_modified
        +bool has_unsaved_changes
        +add_data_source(DataSource)
        +remove_data_source(DataSource)
        +clear_data_sources()
        +get_data_source_by_id(String)
        +get_visualization_by_id(String)
        +notify_observers()
    }

    class DataSource {
        +String name
        +String source_type
        +Path file_path
        +DateTime created_at
        +String id
        +Dataset dataset
        +List~Visualization~ visualizations
        +add_visualization(Visualization)
        +remove_visualization(String)
        +get_visualization_by_id(String)
    }

    class Dataset {
        +DataFrame data
        +Dict metadata
        +List~Column~ columns
        +get_column(name)
        +add_column(Column)
        +remove_column(name)
    }

    class Column {
        +String name
        +String data_type
        +String original_type
        +Dict stats
        +Dict metadata
        +from_series(name, series)
        +get_summary()
    }

    class Visualization {
        +String name
        +String chart_type
        +Dict config
        +DateTime created_at
        +DateTime modified_at
        +String id
        +render()
        +update_config(config)
    }

    class Observable {
        <<interface>>
        +add_observer(Observer)
        +remove_observer(Observer)
        +notify_observers()
    }

    class Observer {
        <<interface>>
        +update(Observable)
    }

    class CSVImporter {
        +import_file(file_path, options)
        +generate_preview(file_path, options)
    }

    class DataTransformation {
        +apply(data, params)
        +validate(params)
    }

    Project --|> Observable
    Project "1" o-- "*" DataSource
    DataSource "1" o-- "1" Dataset
    DataSource "1" o-- "*" Visualization
    Dataset "1" o-- "*" Column
    CSVImporter --> DataSource : creates
    DataTransformation --> Dataset : modifies